saving before trying some weirdrd slideshow stuff

--- a/costs.html
+++ b/costs.html
@@ -135,7 +135,7 @@
                           <a href="#tummy-tuck">Tummy Tuck</a>
                           <a href="#breast-augmentation">Breast Augmentation</a>
                         </div>
-                        <div class="cell-sm-6 offset-sm-top-0 cost-links">
+                        <div class="cell-sm-6 offset-sm-top-0 cost-links" style="margin-top:0;">
                           <a href="#breast-reduction">Breast Reduction</a>
                           <a href="#breast-reconstruction">Breast Reconstruction</a>
                           <a href="#rhinoplasty">Rhinoplasty</a>
@@ -324,11 +324,11 @@
                 </li>      
                 <li><a href="contacts.html">Contacts</a>
                 </li>
-                <li><a href="privacy.html">Privacy Policy</a>
+                <li><a href="#">Privacy Policy</a>
                 </li>
-                <li><a href="sitemap.html">Site Map</a>
+                <li><a href="#">Site Map</a>
                 </li>
-                <li><a href="disclaimer.html">Disclaimer</a>
+                <li><a href="#">Disclaimer</a>
                 </li>
               </ul>
             </div>
