--- a/grid-gallery.html
+++ b/grid-gallery.html
@@ -132,8 +132,11 @@
                     <ul id="isotope-1" class="nav nav-pills">
                       <li><a data-isotope-filter="*" data-isotope-group="gallery" href="#">All</a></li>
                       <li><a data-isotope-filter="tab 1" data-isotope-group="gallery" href="#">Facelift</a></li>
-                      <li><a data-isotope-filter="tab 2" data-isotope-group="gallery" href="#">Liposuction</a></li>
-                      <li><a data-isotope-filter="tab 3" data-isotope-group="gallery" href="#">Tummy Tuck</a></li>
+                      <li><a data-isotope-filter="tab 2" data-isotope-group="gallery" href="#">Tummy Tuck</a></li>
+                      <li><a data-isotope-filter="tab 3" data-isotope-group="gallery" href="#">Breast Augmentation</a></li>
+                      <li><a data-isotope-filter="tab 1" data-isotope-group="gallery" href="#">Liposuction</a></li>
+                      <li><a data-isotope-filter="tab 2" data-isotope-group="gallery" href="#">Body Contouring</a></li>
+                      <li><a data-isotope-filter="tab 3" data-isotope-group="gallery" href="#">Cell Therapy</a></li>
                     </ul>
                   </div>
                   <!-- Isotope Content-->
@@ -214,11 +217,11 @@
                 </li>      
                 <li><a href="contacts.html">Contacts</a>
                 </li>
-                <li><a href="privacy.html">Privacy Policy</a>
+                <li><a href="#">Privacy Policy</a>
                 </li>
-                <li><a href="sitemap.html">Site Map</a>
+                <li><a href="#">Site Map</a>
                 </li>
-                <li><a href="disclaimer.html">Disclaimer</a>
+                <li><a href="#">Disclaimer</a>
                 </li>
               </ul>
             </div>
