--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                   <img src="images/users/our-team-06-384x410.jpg" class="unit-left">
                 </div>
                 <div class="col-md-9 col-lg-9 col-sm-8 col-xs-12">
-                  <h4 class="offset-lg-top-0 offset-md-top-0 offset-sm-top-0 offset-xs-top-20">Ricky Baker M.D., F.A.C.S.</h4>
+                  <h4 class="offset-lg-top-0 offset-md-top-0 offset-sm-top-0 offset-xs-top-20 offset-top-mobile-20">Ricky Baker M.D., F.A.C.S.</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper sit. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque.<br>
                     Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan.</p>
                   <div class="offset-top-20">
@@ -342,11 +342,11 @@
                 </li>      
                 <li><a href="contacts.html">Contacts</a>
                 </li>
-                <li><a href="privacy.html">Privacy Policy</a>
+                <li><a href="#">Privacy Policy</a>
                 </li>
-                <li><a href="sitemap.html">Site Map</a>
+                <li><a href="#">Site Map</a>
                 </li>
-                <li><a href="disclaimer.html">Disclaimer</a>
+                <li><a href="#">Disclaimer</a>
                 </li>
               </ul>
             </div>
