--- a/testimonials.html
+++ b/testimonials.html
@@ -324,11 +324,11 @@
                 </li>      
                 <li><a href="contacts.html">Contacts</a>
                 </li>
-                <li><a href="privacy.html">Privacy Policy</a>
+                <li><a href="#">Privacy Policy</a>
                 </li>
-                <li><a href="sitemap.html">Site Map</a>
+                <li><a href="#">Site Map</a>
                 </li>
-                <li><a href="disclaimer.html">Disclaimer</a>
+                <li><a href="#">Disclaimer</a>
                 </li>
               </ul>
             </div>
