slideshows looking good, and tweraked the brand a tad

--- a/about.html
+++ b/about.html
@@ -148,16 +148,18 @@
                   <div class="cell-xs-10 cell-md-4 col-md-4">
                     <div class="darktransparent offset-top-20">
                       <h5>What we do</h5>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                      <h5><a href="procedure.html">Tummy Tuck</a></h5>
-                      <h5><a href="procedure.html">Liposuction</a></h5>
-                      <h5><a href="procedure.html">Breast Augmentation</a></h5>
-                      <h5><a href="procedure.html">Breast Reduction</a></h5>
-                      <h5><a href="procedure.html">Breast Reconstruction</a></h5>
-                      <h5><a href="procedure.html">Rhinoplasty</a></h5>
-                      <h5><a href="procedure.html">Buttock Enhancement</a></h5>
-                      <h5><a href="procedure.html">Labiaplasty</a></h5>
-                      <div class="offset-top-20"><a href="services.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
+                      <div class="col-12 offset-top-10">
+                        <h5><a href="procedure.html">Tummy Tuck</a></h5>
+                        <h5><a href="procedure.html">Liposuction</a></h5>
+                        <h5><a href="procedure.html">Breast Augmentation</a></h5>
+                        <h5><a href="procedure.html">Breast Reduction</a></h5>
+                        <h5><a href="procedure.html">Breast Reconstruction</a></h5>
+                        <h5><a href="procedure.html">Rhinoplasty</a></h5>
+                        <h5><a href="procedure.html">Buttock Enhancement</a></h5>
+                        <h5><a href="procedure.html">Labiaplasty</a></h5>
+                        <div class="offset-top-20 col-12"><a href="services.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
+                      </div>
                     </div>
                     <div class="darktransparent offset-top-20">
                       <div class="row">
