--- a/grid-gallery.html
+++ b/grid-gallery.html
@@ -120,7 +120,7 @@
             <div class="shell text-right">
               <div class="range range-xs-center range-md-right">
                 <div class="cell-sm-10 cell-md-8 cell-lg-6">
-                  <h2>Costs</h2>
+                  <h2>Gallery</h2>
                   <h3>Lorem ipsum dolor sit amet</h3>
                   <div class="offset-top-0"><a href="contacts.html" class="btn btn-ellipse btn-primary">Schedule your free consultation</a></div>
                 </div>
