--- a/testimonials.html
+++ b/testimonials.html
@@ -123,8 +123,8 @@
                   <div class="offset-top-0"><a href="contacts.html" class="btn btn-ellipse btn-primary">Schedule your free consultation</a></div>
                 </div>
               </div>
-              <div class="lighttransparent offset-top-66 section-bottom-85">
-                <h5 class="text-primary">Testimonials</h5>
+              <div class="darktransparent offset-top-66 section-bottom-41">
+                <h5 class="text-primary text-center text-white">Testimonials</h5>
                 <div data-loop="false" data-margin="15" data-items="1" data-dots="true" data-mouse-drag="false" data-md-items="3" data-nav="false" class="owl-carousel owl-carousel-default owl-carousel-class-light offset-top-20">
                   <div class="owl-item">
                     <blockquote class="quote quote-classic">
@@ -138,7 +138,7 @@
                             <p class="quote-desc text-capitalize text-gray">Regular Patient</p>
                           </div>
                         </div>
-                        <p class="text-gray-dark font-size-15">
+                        <p class="text-white font-size-15">
                           <q>The costs of treatments are very reasonable at Visage and I have always been impressed with the results. The fully medically qualified team at the clinic is professional, friendly and trustworthy.</q>
                         </p>
                       </div>
@@ -156,7 +156,7 @@
                             <p class="quote-desc text-capitalize text-gray text-italic">Regular Patient</p>
                           </div>
                         </div>
-                        <p class="h4 text-italic text-gray-dark font-size-15">
+                        <p class="h4 text-italic text-white font-size-15">
                           <q>Dr. Bryant is a wonderful Doctor, who makes you feel important and who takes time to listen, which most doctors don’t do. Loved him from the first visit! Very professional assistance.</q>
                         </p>
                       </div>
@@ -174,7 +174,7 @@
                             <p class="quote-desc text-capitalize text-gray text-italic">Regular Patient</p>
                           </div>
                         </div>
-                        <p class="h4 text-italic text-gray-dark font-size-15">
+                        <p class="h4 text-italic text-white font-size-15">
                           <q>Wonderful people here! They listen to you, and are genuinely concerned about providing you the best care possible! I would recommend them to everyone!</q>
                         </p>
                       </div>
@@ -192,7 +192,7 @@
                             <p class="quote-desc text-capitalize text-gray text-italic">Regular Patient</p>
                           </div>
                         </div>
-                        <p class="h4 text-italic text-gray-dark font-size-15">
+                        <p class="h4 text-italic text-white font-size-15">
                           <q>The costs of treatments are very reasonable at Visage and I have always been impressed with the results. The fully medically qualified team at the clinic is professional, friendly and trustworthy.</q>
                         </p>
                       </div>
@@ -210,7 +210,7 @@
                             <p class="quote-desc text-capitalize text-gray text-italic">Regular Patient</p>
                           </div>
                         </div>
-                        <p class="h4 text-italic text-gray-dark font-size-15">
+                        <p class="h4 text-italic text-white font-size-15">
                           <q>Dr. Bryant is a wonderful Doctor, who makes you feel important and who takes time to listen, which most doctors don’t do. Loved him from the first visit! Very professional assistance.</q>
                         </p>
                       </div>
@@ -228,7 +228,7 @@
                             <p class="quote-desc text-capitalize text-gray text-italic">Regular Patient</p>
                           </div>
                         </div>
-                        <p class="h4 text-italic text-gray-dark font-size-15">
+                        <p class="h4 text-italic text-white font-size-15">
                           <q>Wonderful people here! They listen to you, and are genuinely concerned about providing you the best care possible! I would recommend them to everyone!</q>
                         </p>
                       </div>
@@ -246,7 +246,7 @@
                             <p class="quote-desc text-capitalize text-gray text-italic">Regular Patient</p>
                           </div>
                         </div>
-                        <p class="h4 text-italic text-gray-dark font-size-15">
+                        <p class="h4 text-italic text-white font-size-15">
                           <q>The costs of treatments are very reasonable at Visage and I have always been impressed with the results. The fully medically qualified team at the clinic is professional, friendly and trustworthy.</q>
                         </p>
                       </div>
@@ -264,7 +264,7 @@
                             <p class="quote-desc text-capitalize text-gray text-italic">Regular Patient</p>
                           </div>
                         </div>
-                        <p class="h4 text-italic text-gray-dark font-size-15">
+                        <p class="h4 text-italic text-white font-size-15">
                           <q>Dr. Bryant is a wonderful Doctor, who makes you feel important and who takes time to listen, which most doctors don’t do. Loved him from the first visit! Very professional assistance.</q>
                         </p>
                       </div>
@@ -282,7 +282,7 @@
                             <p class="quote-desc text-capitalize text-gray text-italic">Regular Patient</p>
                           </div>
                         </div>
-                        <p class="h4 text-italic text-gray-dark font-size-15">
+                        <p class="h4 text-italic text-white font-size-15">
                           <q>Wonderful people here! They listen to you, and are genuinely concerned about providing you the best care possible! I would recommend them to everyone!</q>
                         </p>
                       </div>
