forgot more stuff

--- a/team-member.html
+++ b/team-member.html
@@ -146,7 +146,7 @@
                       </div>
                     </div>
                     <div class="inset-md-right-20 offset-top-20 darktransparent">
-                      <h5 class="text-left offset-top-20">Specialty</h5>
+                      <h5 class="text-left">Specialty</h5>
                       <ul class="biolist">
                         <li>Cosmetic Facial Plastic and Reconstructive Surgery</li>
                         <li>Rejuvenation of the Aging Face Facelift</li>
